created dockerfile for creating a cuba app as a docker container

--- a/modules/web/src/web-app.properties
+++ b/modules/web/src/web-app.properties
@@ -44,3 +44,4 @@ cuba.web.theme = halo
 
 # Set of available locales
 cuba.availableLocales=English|en;Russian|ru;
+cuba.web.foldersPaneEnabled = true
