--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ def globalModule = project(':app-global')
 def coreModule = project(':app-core')
 def guiModule = project(':app-gui')
 def webModule = project(':app-web')
+def portalModule = project(':app-portal')
 
 def servletApi = 'org.apache.tomcat:tomcat-servlet-api:8.0.26'
 
@@ -45,9 +46,9 @@ cuba {
     }
 }
 
-def hsql = 'org.hsqldb:hsqldb:2.2.9'
+def postgres = 'org.postgresql:postgresql:9.4-1201-jdbc41'
 
-configure([globalModule, coreModule, guiModule, webModule]) {
+configure([globalModule, coreModule, guiModule, webModule, portalModule]) {
     apply(plugin: 'java')
     apply(plugin: 'maven')
     apply(plugin: 'idea')
@@ -87,8 +88,8 @@ configure(coreModule) {
     dependencies {
         compile(globalModule)
         provided(servletApi)
-        jdbc(hsql)
-        testRuntime(hsql)
+        jdbc(postgres)
+        testRuntime(postgres)
         compile("com.haulmont.cuba:cuba-core:$cubaVersion")
         testCompile("com.haulmont.cuba:cuba-core:$cubaVersion:tests")
         testCompile("com.haulmont.cuba:cuba-shared-lib:$cubaVersion")
@@ -112,28 +113,29 @@ configure(coreModule) {
     }
 
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
-        dbms = 'hsql'
-        host = 'localhost'
-        dbName = 'om'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbms = 'postgres'
+        host = '192.168.195.157'
+        dbName = 'postgres'
+        dbUser = 'postgres'
+        dbPassword = 'postgres'
     }
 
     task updateDb(dependsOn: assembleDbScripts, description: 'Updates local database', type: CubaDbUpdate) {
-        dbms = 'hsql'
-        host = 'localhost'
-        dbName = 'om'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbms = 'postgres'
+        host = '192.168.195.157'
+        dbName = 'postgres'
+        dbUser = 'postgres'
+        dbPassword = 'postgres'
     }
 }
 
 configure(guiModule) {
     dependencies {
         compile(globalModule)
-        compile("com.haulmont.cuba:cuba-client:$cubaVersion")
         compile("com.haulmont.cuba:cuba-gui:$cubaVersion")
         testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
+        testCompile('org.jmockit:jmockit:1.15')
+        compile("com.haulmont.cuba:cuba-client:$cubaVersion")
         testCompile('org.jmockit:jmockit:1.15')
 
     }
@@ -159,6 +161,7 @@ configure(webModule) {
         webcontent("com.haulmont.cuba:cuba-web:$cubaVersion:web@zip")
         webcontent("com.haulmont.cuba:cuba-web-toolkit:$cubaVersion:web@zip")
         testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
+        testCompile('org.jmockit:jmockit:1.15')
         testCompile('org.jmockit:jmockit:1.15')
 
     }
@@ -195,21 +198,76 @@ configure(webModule) {
 
     task deploy(dependsOn: [assemble, cleanConf], type: CubaDeployment) {
         appName = 'app'
-        appJars('cuba-client', 'cuba-gui', 'cuba-global', 'cuba-web', 
+        appJars('cuba-global', 'cuba-gui', 'cuba-client', 'cuba-web', 
                 'app-global', 'app-gui', 'app-web')
     }
 }
 
 
 
+configure(portalModule) {
+    dependencies {
+        provided(servletApi)
+        compile(globalModule)
+        compile("com.haulmont.cuba:cuba-portal:$cubaVersion")
+        testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
+        testCompile('org.jmockit:jmockit:1.15')
+
+    }
+
+    def webappName = 'app-portal'
+    def resourcesDir = "$cuba.tomcat.dir/webapps/$webappName/resources"
+    def ftlDir = "$cuba.tomcat.dir/webapps/$webappName/WEB-INF/templates"
+
+    task deploy(dependsOn: assemble, type: CubaDeployment) {
+        appName = webappName
+        appJars('cuba-global', 'cuba-client', 'cuba-portal', 
+                'app-global', 'app-portal')
+    }
+
+    task deployStatic() << {
+        copy {
+            from file('web/resources')
+            include '**/*.css'
+            include '**/*.js'
+            include '**/*.png'
+            include '**/*.gif'
+            include '**/*.jpg'
+            into resourcesDir
+        }
+        copy {
+            from file('web/WEB-INF/templates')
+            include '**/*.ftl'
+            into ftlDir
+        }
+    }
+
+    task cleanStatic() << {
+        delete resourcesDir
+        delete ftlDir
+    }
+
+    task webArchive(type: Zip) {
+        from file('web')
+        from file("$buildDir/web")
+        exclude '**/web.xml', '**/app.properties'
+        classifier = 'web'
+    }
+
+    artifacts {
+        archives webArchive
+    }
+}
+
 
 task undeploy(type: Delete, dependsOn: ':app-web:cleanConf') {
     delete("$cuba.tomcat.dir/shared")
     delete("$cuba.tomcat.dir/webapps/app-core")
     delete("$cuba.tomcat.dir/webapps/app")
+    delete("$cuba.tomcat.dir/webapps/app-portal")
 }
 
-task restart(dependsOn: ['stop', ':app-core:deploy', ':app-web:deploy'], description: 'Redeploys applications and restarts local Tomcat') << {
+task restart(dependsOn: ['stop', ':app-core:deploy', ':app-web:deploy', ':app-portal:deploy'], description: 'Redeploys applications and restarts local Tomcat') << {
     ant.waitfor(maxwait: 6, maxwaitunit: 'second', checkevery: 2, checkeveryunit: 'second') {
         not {
             socket(server: 'localhost', port: '8787')
@@ -220,4 +278,13 @@ task restart(dependsOn: ['stop', ':app-core:deploy', ':app-web:deploy'], descrip
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.6'
+}
+
+
+task buildWar(type: CubaWarBuilding) {
+    coreProject = project(':app-core')
+    webProject = project(':app-web')
+    appName = 'app'
+    appHome = '/opt/cuba_home'
+    singleWar = false
 }
