--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = cuba-spring.xml spring.xml
 
@@ -19,3 +19,6 @@ cuba.mainMessagePack = com.haulmont.cuba.core com.company.ordermanagement.core
 ###############################################################################
 
 cuba.webContextName = app-core
+cuba.availableLocales = English|en;Russian|ru;
+
+cuba.automaticDatabaseUpdate = true
