--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = cuba-spring.xml spring.xml
 
@@ -22,3 +22,9 @@ cuba.webContextName = app-core
 cuba.availableLocales = English|en;Russian|ru;
 
 cuba.automaticDatabaseUpdate = true
+
+###############################################################################
+#                      Cloud Foundry specific settings                        #
+###############################################################################
+
+app.home=..
