--- a/modules/web/src/web-app.properties
+++ b/modules/web/src/web-app.properties
@@ -45,3 +45,10 @@ cuba.web.theme = halo
 # Set of available locales
 cuba.availableLocales=English|en;Russian|ru;
 cuba.web.foldersPaneEnabled = true
+
+
+###############################################################################
+#                      Cloud Foundry specific settings                        #
+###############################################################################
+
+app.home=..
