cuba-ordermanagement uses cuba 6.1

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 
 buildscript {
-    ext.cubaVersion = '6.0.8'
+    ext.cubaVersion = '6.1.2'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
@@ -224,7 +224,7 @@ configure(webModule) {
     task deploy(dependsOn: [assemble, cleanConf], type: CubaDeployment) {
         appName = 'app'
         appJars('cuba-global', 'cuba-gui', 'cuba-client', 'cuba-web', 
-                'app-global', 'app-gui', 'app-web')
+                'app-global', 'app-gui', 'app-web', 'cuba-rest-api')
     }
 }
 
@@ -247,7 +247,7 @@ configure(portalModule) {
     task deploy(dependsOn: assemble, type: CubaDeployment) {
         appName = webappName
         appJars('cuba-global', 'cuba-client', 'cuba-portal', 
-                'app-global', 'app-portal')
+                'app-global', 'app-portal', 'cuba-rest-api')
     }
 
     task deployStatic() << {
