--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -22,3 +22,4 @@ cuba.webContextName = app-core
 cuba.availableLocales = English|en;Russian|ru;
 
 cuba.automaticDatabaseUpdate = true
+cuba.localeSelectVisible = true
