--- a/modules/portal/src/portal-app.properties
+++ b/modules/portal/src/portal-app.properties
@@ -35,3 +35,4 @@ cuba.useLocalServiceInvocation = true
 # URL
 cuba.webContextName = app-portal
 cuba.availableLocales = English|en;Russian|ru;
+cuba.localeSelectVisible = true
