updated platform to version 6.2.1

--- a/modules/portal/web/WEB-INF/web.xml
+++ b/modules/portal/web/WEB-INF/web.xml
@@ -1,43 +1,30 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5">
-
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee     http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
     <!-- Application properties config files -->
     <context-param>
         <param-name>appPropertiesConfig</param-name>
-        <param-value>
-            classpath:cuba-portal-app.properties
+        <param-value>classpath:cuba-portal-app.properties
             classpath:portal-app.properties
             /WEB-INF/local.app.properties
-            "file:${catalina.home}/conf/app-portal/local.app.properties"
-        </param-value>
+            "file:${catalina.home}/conf/app-portal/local.app.properties"</param-value>
     </context-param>
-
     <listener>
         <listener-class>com.haulmont.cuba.portal.sys.PortalAppContextLoader</listener-class>
     </listener>
-    
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
-    
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            classpath:cuba-portal-security-spring.xml
-            classpath:portal-security-spring.xml
-        </param-value>
+        <param-value>classpath:cuba-portal-security-spring.xml
+            classpath:portal-security-spring.xml</param-value>
     </context-param>
-
     <listener>
-        <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
     <!-- Handles all webportal requests into the application -->
     <servlet>
         <servlet-name>portal</servlet-name>
@@ -47,23 +34,19 @@
             <param-value>1</param-value>
         </init-param>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>portal</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
     <!-- Spring security -->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
     <error-page>
         <error-code>403</error-code>
         <location>/error/404</location>
@@ -72,5 +55,4 @@
         <error-code>404</error-code>
         <location>/error/404</location>
     </error-page>
-
 </web-app>
