--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = cuba-spring.xml spring.xml
 
