updated to CUBA 6.8

--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -4,15 +4,13 @@
 
 cuba.dbmsType = hsql
 
-cuba.springContextConfig = cuba-spring.xml spring.xml
+cuba.springContextConfig = +spring.xml
 
-cuba.persistenceConfig = cuba-persistence.xml persistence.xml
+cuba.persistenceConfig = +persistence.xml
 
-cuba.metadataConfig = cuba-metadata.xml metadata.xml
+cuba.metadataConfig = +metadata.xml
 
-cuba.viewsConfig = cuba-views.xml views.xml
-
-cuba.mainMessagePack = com.haulmont.cuba.core com.company.ordermanagement.core
+cuba.viewsConfig = +views.xml
 
 ###############################################################################
 #                                  Other                                      #
@@ -23,3 +21,4 @@ cuba.availableLocales = English|en;Russian|ru;
 
 cuba.automaticDatabaseUpdate = true
 cuba.localeSelectVisible = true
+cuba.anonymousSessionId = 853ebfd4-7681-9a81-6930-949c6174ed73
