--- a/modules/core/web/WEB-INF/web.xml
+++ b/modules/core/web/WEB-INF/web.xml
@@ -6,8 +6,7 @@
     <!-- Application properties config files -->
     <context-param>
         <param-name>appPropertiesConfig</param-name>
-        <param-value>classpath:cuba-app.properties
-            classpath:app.properties
+        <param-value>classpath:app.properties
             /WEB-INF/local.app.properties
             "file:${catalina.home}/conf/app-core/local.app.properties"</param-value>
     </context-param>
@@ -23,4 +22,8 @@
         <servlet-name>remoting</servlet-name>
         <url-pattern>/remoting/*</url-pattern>
     </servlet-mapping>
+    <context-param>
+        <param-name>appComponents</param-name>
+        <param-value>com.haulmont.cuba</param-value>
+    </context-param>
 </web-app>
