--- a/modules/portal/src/portal-app.properties
+++ b/modules/portal/src/portal-app.properties
@@ -3,22 +3,22 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.springContextConfig = cuba-portal-spring.xml portal-spring.xml
+cuba.springContextConfig = +portal-security-spring.xml portal-spring.xml
 
-cuba.dispatcherSpringContextConfig = cuba-portal-dispatcher-spring.xml portal-dispatcher-spring.xml
-
-
-cuba.persistenceConfig = cuba-persistence.xml persistence.xml
-
-cuba.metadataConfig = cuba-metadata.xml metadata.xml
-
-cuba.viewsConfig = cuba-views.xml views.xml
+cuba.dispatcherSpringContextConfig = +portal-dispatcher-spring.xml
 
 
-cuba.mainMessagePack = com.haulmont.cuba.core com.company.ordermanagement.portal
+cuba.persistenceConfig = +persistence.xml
+
+cuba.metadataConfig = +metadata.xml
+
+cuba.viewsConfig = +views.xml
+
+
+cuba.mainMessagePack = +com.company.ordermanagement.portal
 
 cuba.portal.theme = default
-cuba.portal.templateLoaderPath = /WEB-INF/templates
+cuba.portal.templateLoaderPath = /WEB-INF/templates/
 
 cuba.portal.anonymousUserLogin = admin
 cuba.trustedClientPassword = MLdWm1Ik4NmM
@@ -36,3 +36,4 @@ cuba.useLocalServiceInvocation = true
 cuba.webContextName = app-portal
 cuba.availableLocales = English|en;Russian|ru;
 cuba.localeSelectVisible = true
+cuba.anonymousSessionId = 853ebfd4-7681-9a81-6930-949c6174ed73
