--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 
 buildscript {
-    ext.cubaVersion = '6.2.1'
+    ext.cubaVersion = '6.8.0'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
@@ -45,6 +45,11 @@ cuba {
         
     }
 }
+
+dependencies {
+    appComponent("com.haulmont.cuba:cuba-global:$cubaVersion")
+}
+
 
 def hsql = 'org.hsqldb:hsqldb:2.2.9'
 
@@ -95,7 +100,6 @@ configure([globalModule, coreModule, guiModule, webModule, portalModule]) {
 
 configure(globalModule) {
     dependencies {
-        compile("com.haulmont.cuba:cuba-global:$cubaVersion")
 
     }
 
@@ -115,10 +119,6 @@ configure(coreModule) {
         provided(servletApi)
         jdbc(hsql)
         testRuntime(hsql)
-        compile("com.haulmont.cuba:cuba-core:$cubaVersion")
-        testCompile("com.haulmont.cuba:cuba-core:$cubaVersion:tests")
-        testCompile("com.haulmont.cuba:cuba-shared-lib:$cubaVersion")
-        dbscripts("com.haulmont.cuba:cuba-core:$cubaVersion:db@zip")
 
     }
 
@@ -133,8 +133,7 @@ configure(coreModule) {
 
     task deploy(dependsOn: [assemble, cleanConf], type: CubaDeployment) {
         appName = 'app-core'
-        appJars('cuba-global', 'cuba-core', 
-                'app-global', 'app-core')
+        appJars('app-global', 'app-core')
     }
 
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
@@ -157,10 +156,7 @@ configure(coreModule) {
 configure(guiModule) {
     dependencies {
         compile(globalModule)
-        compile("com.haulmont.cuba:cuba-gui:$cubaVersion")
-        testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
         testCompile('org.jmockit:jmockit:1.15')
-        compile("com.haulmont.cuba:cuba-client:$cubaVersion")
         testCompile('org.jmockit:jmockit:1.15')
 
     }
@@ -182,10 +178,6 @@ configure(webModule) {
         provided(servletApi)
         compile(globalModule)
         compile(guiModule)
-        compile("com.haulmont.cuba:cuba-web:$cubaVersion")
-        webcontent("com.haulmont.cuba:cuba-web:$cubaVersion:web@zip")
-        webcontent("com.haulmont.cuba:cuba-web-toolkit:$cubaVersion:web@zip")
-        testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
         testCompile('org.jmockit:jmockit:1.15')
         testCompile('org.jmockit:jmockit:1.15')
 
@@ -223,8 +215,7 @@ configure(webModule) {
 
     task deploy(dependsOn: [assemble, cleanConf], type: CubaDeployment) {
         appName = 'app'
-        appJars('cuba-global', 'cuba-gui', 'cuba-client', 'cuba-web', 
-                'app-global', 'app-gui', 'app-web', 'cuba-rest-api')
+        appJars('app-global', 'app-gui', 'app-web')
     }
 }
 
@@ -234,8 +225,6 @@ configure(portalModule) {
     dependencies {
         provided(servletApi)
         compile(globalModule)
-        compile("com.haulmont.cuba:cuba-portal:$cubaVersion")
-        testCompile("com.haulmont.cuba:cuba-client:$cubaVersion:tests")
         testCompile('org.jmockit:jmockit:1.15')
 
     }
@@ -246,8 +235,7 @@ configure(portalModule) {
 
     task deploy(dependsOn: assemble, type: CubaDeployment) {
         appName = webappName
-        appJars('cuba-global', 'cuba-client', 'cuba-portal', 
-                'app-global', 'app-portal', 'cuba-rest-api')
+        appJars('app-global', 'app-portal')
     }
 
     task deployStatic() << {
@@ -302,7 +290,7 @@ task restart(dependsOn: ['stop', ':app-core:deploy', ':app-web:deploy', ':app-po
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
+    gradleVersion = '4.3.1'
 }
 
 
