--- a/modules/portal/web/WEB-INF/web.xml
+++ b/modules/portal/web/WEB-INF/web.xml
@@ -6,8 +6,7 @@
     <!-- Application properties config files -->
     <context-param>
         <param-name>appPropertiesConfig</param-name>
-        <param-value>classpath:cuba-portal-app.properties
-            classpath:portal-app.properties
+        <param-value>classpath:portal-app.properties
             /WEB-INF/local.app.properties
             "file:${catalina.home}/conf/app-portal/local.app.properties"</param-value>
     </context-param>
@@ -16,14 +15,6 @@
     </listener>
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-    </listener>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:cuba-portal-security-spring.xml
-            classpath:portal-security-spring.xml</param-value>
-    </context-param>
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     <!-- Handles all webportal requests into the application -->
     <servlet>
@@ -42,6 +33,14 @@
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>contextAttribute</param-name>
+            <param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.portal</param-value>
+        </init-param>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>springSecurityFilterChain</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
@@ -55,4 +54,33 @@
         <error-code>404</error-code>
         <location>/error/404</location>
     </error-page>
+    <context-param>
+        <param-name>appComponents</param-name>
+        <param-value>com.haulmont.cuba</param-value>
+    </context-param>
+    <servlet>
+        <servlet-name>rest_api</servlet-name>
+        <servlet-class>com.haulmont.restapi.sys.CubaRestApiServlet</servlet-class>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>rest_api</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+    <filter>
+        <filter-name>restSpringSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>contextAttribute</param-name>
+            <param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.rest_api</param-value>
+        </init-param>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>springSecurityFilterChain</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>restSpringSecurityFilterChain</filter-name>
+        <url-pattern>/rest/*</url-pattern>
+    </filter-mapping>
 </web-app>
