--- a/modules/web/src/web-app.properties
+++ b/modules/web/src/web-app.properties
@@ -3,23 +3,23 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.springContextConfig = cuba-web-spring.xml web-spring.xml
+cuba.springContextConfig = +web-spring.xml
 
-cuba.dispatcherSpringContextConfig = cuba-dispatcher-spring.xml web-dispatcher-spring.xml
+cuba.dispatcherSpringContextConfig = +web-dispatcher-spring.xml
 
-cuba.persistenceConfig = cuba-persistence.xml persistence.xml
+cuba.persistenceConfig = +persistence.xml
 
-cuba.metadataConfig = cuba-metadata.xml cuba-gui-metadata.xml cuba-web-metadata.xml metadata.xml
+cuba.metadataConfig = +metadata.xml
 
-cuba.viewsConfig = cuba-views.xml views.xml
+cuba.viewsConfig = +views.xml
 
-cuba.windowConfig = cuba-web-screens.xml web-screens.xml
+cuba.windowConfig = +web-screens.xml
 
-cuba.menuConfig = cuba-web-menu.xml web-menu.xml
+cuba.menuConfig = +web-menu.xml
 
-cuba.permissionConfig = cuba-web-permissions.xml web-permissions.xml
+cuba.permissionConfig = +web-permissions.xml
 
-cuba.mainMessagePack = com.haulmont.cuba.web com.company.ordermanagement.gui com.company.ordermanagement.web
+cuba.mainMessagePack = +com.company.ordermanagement.gui com.company.ordermanagement.web
 
 cuba.creditsConfig = cuba-credits.xml
 
@@ -46,3 +46,4 @@ cuba.web.theme = halo
 cuba.availableLocales=English|en;Russian|ru;
 cuba.web.foldersPaneEnabled = true
 cuba.localeSelectVisible = true
+cuba.anonymousSessionId = 853ebfd4-7681-9a81-6930-949c6174ed73
